--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,4 @@ node_js:
  - "0.11"
  - "0.10"
 script: "npm run-script test-travis"
+after_script: "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
